force-app/main/default/objects/Lead/fields/Employee_Default_Contribution_Rate__c.field-meta.xml
<CustomField>
    <fullName>Employee_Default_Contribution_Rate__c</fullName>
    <label>Employee Default Contribution Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3%</fullName>
            </value>
            <value>
                <fullName>4%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>6%</fullName>
            </value>
            <value>
                <fullName>7%</fullName>
            </value>
            <value>
                <fullName>8%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>