force-app/main/default/objects/Lead/fields/Facebook_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Campaign__c</fullName>
    <label>Facebook Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>