force-app/main/default/objects/Lead/fields/Firm_CRD__c.field-meta.xml
<CustomField>
    <fullName>Firm_CRD__c</fullName>
    <label>Firm CRD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>