force-app/main/default/objects/Lead/fields/Firm_Type__c.field-meta.xml
<CustomField>
    <fullName>Firm_Type__c</fullName>
    <label>Firm Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RIA</fullName>
            </value>
            <value>
                <fullName>Broker Dealer</fullName>
            </value>
            <value>
                <fullName>Dually-Registered</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
                <isActive>false</isActive>
                <label>Bank</label>
            </value>
            <value>
                <fullName>Credit Union</fullName>
                <isActive>false</isActive>
                <label>Credit Union</label>
            </value>
            <value>
                <fullName>Firm Type</fullName>
                <isActive>false</isActive>
                <label>Firm Type</label>
            </value>
            <value>
                <fullName>Start-Up RIA</fullName>
                <isActive>false</isActive>
                <label>Start-Up RIA</label>
            </value>
            <value>
                <fullName>Startup-Up RIA</fullName>
                <isActive>false</isActive>
                <label>Startup-Up RIA</label>
            </value>
            <value>
                <fullName>Trust Company</fullName>
                <isActive>false</isActive>
                <label>Trust Company</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>