force-app/main/default/objects/Lead/fields/Fund_List__c.field-meta.xml
<CustomField>
    <fullName>Fund_List__c</fullName>
    <label>Fund List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>