force-app/main/default/objects/Lead/fields/How_did_you_hear_about_Ubiquity__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_Ubiquity__c</fullName>
    <description>Confirm how prospects heard about Ubiquity</description>
    <inlineHelpText>Confirm how prospects heard about Ubiquity</inlineHelpText>
    <label>How did you hear about Ubiquity?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web/ Search Engine</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>Postcard</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Simply Retirement</fullName>
            </value>
            <value>
                <fullName>Marketing Email Campaign (Vets, SH, Secure Act, etc.)</fullName>
            </value>
            <value>
                <fullName>News/PR</fullName>
            </value>
            <value>
                <fullName>Facebook/LinkedIn/Social Media</fullName>
            </value>
            <value>
                <fullName>Referral from a personal friend/network</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>