force-app/main/default/objects/Lead/fields/Interested_in_CE_credits__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_CE_credits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in CE credits</label>
    <type>Checkbox</type>
</CustomField>