force-app/main/default/objects/Lead/fields/Intuit_Attempting_Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Intuit_Attempting_Initial_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Intuit or Costco plans, put a check in this pox so that the appropriate Opportunity Stage is defaulted.</description>
    <inlineHelpText>For Intuit or Costco plans, put a check in this pox so that the appropriate Opportunity Stage is defaulted.</inlineHelpText>
    <label>Intuit_Attempting_Initial_Contact</label>
    <type>Checkbox</type>
</CustomField>