force-app/main/default/objects/Lead/fields/Intuit_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Intuit_Client_ID__c</fullName>
    <label>Intuit Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>