force-app/main/default/objects/Lead/fields/Intuit_Feature__c.field-meta.xml
<CustomField>
    <fullName>Intuit_Feature__c</fullName>
    <label>Intuit Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>