force-app/main/default/objects/Lead/fields/Intuit_Partner__c.field-meta.xml
<CustomField>
    <fullName>Intuit_Partner__c</fullName>
    <label>Intuit Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>