force-app/main/default/objects/Lead/fields/Intuit_Product__c.field-meta.xml
<CustomField>
    <fullName>Intuit_Product__c</fullName>
    <label>Intuit Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>