force-app/main/default/objects/Lead/fields/Intuit_Source__c.field-meta.xml
<CustomField>
    <fullName>Intuit_Source__c</fullName>
    <label>Intuit Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>