force-app/main/default/objects/Lead/fields/Is_As_k_Advocate__c.field-meta.xml
<CustomField>
    <fullName>Is_As_k_Advocate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is As(k) Advocate</label>
    <type>Checkbox</type>
</CustomField>