force-app/main/default/objects/Lead/fields/IsConvertedOnCreate__c.field-meta.xml
<CustomField>
    <fullName>IsConvertedOnCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To signal that this is auto converted, and also to specifically block the NPN nightmare flow.</description>
    <label>Converted When Created</label>
    <type>Checkbox</type>
</CustomField>