force-app/main/default/objects/Lead/fields/Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age__c</fullName>
    <formula>IF(
IsConverted, ( ConvertedDate -  DATEVALUE(CreatedDate) ),
IF(
  ISBLANK(Lead_Close_Date__c) = FALSE, (Lead_Close_Date__c - DATEVALUE(CreatedDate)),
( TODAY() - DATEVALUE(CreatedDate))
))</formula>
    <label>Lead Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>