force-app/main/default/objects/Lead/fields/Lead_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Close_Date__c</fullName>
    <description>The date the lead is marked as Qualified, Unqualified or Unable to Qualify and moved out of the open pipeline.</description>
    <inlineHelpText>The date the lead is marked as Qualified, Unqualified or Unable to Qualify and moved out of the open pipeline.</inlineHelpText>
    <label>Lead Close Date</label>
    <type>Date</type>
</CustomField>