force-app/main/default/objects/Lead/fields/Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created__c</fullName>
    <description>Date Lead was Created to be passed to Opportunity</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <inlineHelpText>Date Lead was Created to be passed to Opportunity</inlineHelpText>
    <label>Lead Created</label>
    <type>Date</type>
</CustomField>