force-app/main/default/objects/Lead/fields/Lead_Grade__c.field-meta.xml
<CustomField>
    <fullName>Lead_Grade__c</fullName>
    <formula>if(leadScoring__Total_Lead_Score__c&lt;35,&quot;C&quot;,if(leadScoring__Total_Lead_Score__c&lt;70,&quot;B&quot;,&quot;A&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lead Grade is a calculated field that groups your leads based on their score.</inlineHelpText>
    <label>Lead Grade</label>
    <type>Text</type>
</CustomField>