force-app/main/default/objects/Lead/fields/Lead_Origin__c.field-meta.xml
<CustomField>
    <fullName>Lead_Origin__c</fullName>
    <description>How was this Lead generated? Ubiquity Generated is anything that comes from the website, or partners and goes through the standard distribution. Rep Generated is anything that the RPC Team generates themselves and goes right to that rep.</description>
    <inlineHelpText>How was this Lead generated? Ubiquity Generated is anything that comes from the website, or partners and goes through the standard distribution. Rep Generated is anything that the RPC Team generates themselves and goes right to that rep.</inlineHelpText>
    <label>Lead Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ubiquity Generated</fullName>
                <default>true</default>
                <label>Ubiquity Generated</label>
            </value>
            <value>
                <fullName>Rep Generated</fullName>
            </value>
            <value>
                <fullName>Simply Generated</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>