force-app/main/default/objects/Lead/fields/Lead_Rank__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rank__c</fullName>
    <label>Lead Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>