force-app/main/default/objects/Lead/fields/Marketing_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source__c</fullName>
    <description>This is the Marketing Source that is determined by Pardot</description>
    <inlineHelpText>This is the Marketing Source that is determined by Pardot</inlineHelpText>
    <label>Marketing Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google Paid Search</fullName>
            </value>
            <value>
                <fullName>Google Ad</fullName>
            </value>
            <value>
                <fullName>Google Natural Search</fullName>
            </value>
            <value>
                <fullName>Yahoo Natural Search</fullName>
            </value>
            <value>
                <fullName>Bing Natural Search</fullName>
            </value>
            <value>
                <fullName>Twitter Natural Search</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>PRWeb</fullName>
            </value>
            <value>
                <fullName>Business.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>