force-app/main/default/objects/Lead/fields/maxAutoDeferralPercentage__c.field-meta.xml
<CustomField>
    <fullName>maxAutoDeferralPercentage__c</fullName>
    <label>maxAutoDeferralPercentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>