force-app/main/default/objects/Lead/fields/MC_Removal__c.field-meta.xml
<CustomField>
    <fullName>MC_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the box to delete from Marketing Cloud</description>
    <inlineHelpText>Check the box to delete from Marketing Cloud</inlineHelpText>
    <label>MC Removal</label>
    <type>Checkbox</type>
</CustomField>