force-app/main/default/objects/Lead/fields/minimumAutoDeferralPercentage__c.field-meta.xml
<CustomField>
    <fullName>minimumAutoDeferralPercentage__c</fullName>
    <label>minimumAutoDeferralPercentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>