force-app/main/default/objects/Lead/fields/Morningstar_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Morningstar_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Morningstar Enabled</label>
    <type>Checkbox</type>
</CustomField>