force-app/main/default/objects/Lead/fields/MSCLKID__c.field-meta.xml
<CustomField>
    <fullName>MSCLKID__c</fullName>
    <description>Used for Microsoft Bing Ad tracking</description>
    <label>MSCLKID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>