force-app/main/default/objects/Lead/fields/n2de__Last_rejected__c.field-meta.xml
<CustomField>
    <fullName>n2de__Last_rejected__c</fullName>
    <description>Date &amp; time that the DE assignment of this lead was last rejected</description>
    <inlineHelpText>Date &amp; time that the DE assignment of this lead was last rejected</inlineHelpText>
    <label>Last rejected</label>
    <type>DateTime</type>
</CustomField>