force-app/main/default/objects/Lead/fields/NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Description__c</fullName>
    <description>Description used for 6 digit NAICS code</description>
    <inlineHelpText>Description used for 6 digit NAICS code</inlineHelpText>
    <label>NAICS Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>