force-app/main/default/objects/Lead/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <description>Primary Reason for looking into product</description>
    <label>Need</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Save on Taxes</fullName>
            </value>
            <value>
                <fullName>Save for Retirement</fullName>
            </value>
            <value>
                <fullName>Provide benefit to Employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>