force-app/main/default/objects/Lead/fields/NewConvorSinglek__c.field-meta.xml
<CustomField>
    <fullName>NewConvorSinglek__c</fullName>
    <label>New/Conv or Single(k)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Plan</fullName>
            </value>
            <value>
                <fullName>Conversion Plan</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Express IRA</fullName>
            </value>
            <value>
                <fullName>Single IRA</fullName>
            </value>
            <value>
                <fullName>SIMPLE IRA</fullName>
            </value>
            <value>
                <fullName>Saver(k)</fullName>
            </value>
            <value>
                <fullName>R2R Prospect</fullName>
            </value>
            <value>
                <fullName>Recordkeeping Only</fullName>
            </value>
            <value>
                <fullName>Starter(k)</fullName>
            </value>
            <value>
                <fullName>User Conf Attendee</fullName>
            </value>
            <value>
                <fullName>Fiduciary article recipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>