force-app/main/default/objects/Lead/fields/No_Contact__c.field-meta.xml
<CustomField>
    <fullName>No_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Contact</label>
    <type>Checkbox</type>
</CustomField>