force-app/main/default/objects/Lead/fields/Objections__c.field-meta.xml
<CustomField>
    <fullName>Objections__c</fullName>
    <label>Objections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Objections</valueSetName>
    </valueSet>
</CustomField>