force-app/main/default/objects/Lead/fields/Other_LeadSourceDetail__c.field-meta.xml
<CustomField>
    <fullName>Other_LeadSourceDetail__c</fullName>
    <description>If LeadSourceDetail not provided in pick list, then write in the LeadSourceDetail</description>
    <label>Other Lead Source Detail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>