force-app/main/default/objects/Lead/fields/Owner_Calendly_15__c.field-meta.xml
<CustomField>
    <fullName>Owner_Calendly_15__c</fullName>
    <description>Lead Owners 15 minute Calendly appointment link</description>
    <formula>Owner:User.Calendly_15__c</formula>
    <inlineHelpText>Lead Owners 15 minute Calendly appointment link</inlineHelpText>
    <label>Owner Calendly 15</label>
    <type>Text</type>
</CustomField>