force-app/main/default/objects/Lead/fields/Owner_Calendly_30__c.field-meta.xml
<CustomField>
    <fullName>Owner_Calendly_30__c</fullName>
    <formula>Owner:User.Calendly_30__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Calendly 30</label>
    <type>Text</type>
</CustomField>