force-app/main/default/objects/Lead/fields/Parent_Broker_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Parent_Broker_Dealer__c</fullName>
    <label>Parent Broker Dealer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>