force-app/main/default/objects/Lead/fields/Paycor_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Paycor_Client_ID__c</fullName>
    <label>Paycor Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>