force-app/main/default/objects/Lead/fields/PaycorEmail__c.field-meta.xml
<CustomField>
    <fullName>PaycorEmail__c</fullName>
    <description>Test field for storing HTML email body for debugging purposes.</description>
    <label>PaycorEmail</label>
    <length>131071</length>
    <type>Html</type>
</CustomField>