force-app/main/default/objects/Lead/fields/Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Provider__c</fullName>
    <description>If Payroll Providers are in dropdown they integrate with Ubiquity.</description>
    <inlineHelpText>If Payroll Providers are in dropdown they integrate with Ubiquity.</inlineHelpText>
    <label>Payroll Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insperity</fullName>
            </value>
            <value>
                <fullName>Algentis</fullName>
            </value>
            <value>
                <fullName>Accuchex</fullName>
            </value>
            <value>
                <fullName>Namely</fullName>
            </value>
            <value>
                <fullName>Justworks</fullName>
            </value>
            <value>
                <fullName>California Payroll</fullName>
            </value>
            <value>
                <fullName>Baron Paryoll</fullName>
            </value>
            <value>
                <fullName>ASAP Accounting and Payroll, Inc.</fullName>
            </value>
            <value>
                <fullName>ePay Business Solutions</fullName>
            </value>
            <value>
                <fullName>Press Gold Group</fullName>
            </value>
            <value>
                <fullName>Other Payroll Provider (write in)</fullName>
            </value>
            <value>
                <fullName>Payroll Medics</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>