force-app/main/default/objects/Lead/fields/Payroll_Referral_Info__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Referral_Info__c</fullName>
    <label>Payroll Referral info</label>
    <type>TextArea</type>
</CustomField>